Apps/quickshare/service.yaml
# docker run -d --name quickshare -p 1883:1883 -p 8083:8083 -p 8084:8084 -p 8883:8883 -p 18083:18083  quickshare/quickshare-enterprise:5.9.0
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quickshare
  name: quickshare-service
  namespace: quickshare
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8686
  selector:
    app: quickshare
